--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <p>あなたのロケ: <span id="display2"></span></p>
     <p>集合場所: <span id="comment2"></span></p>
 
-    <p id="staff">担当：GR統括部 総括G 上田（090-6394-2130）</p>
+    <p id="staff">担当：GR統括部 総括G 上田（090-****-****）</p>
  
 </body>
 </html>
