--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
     <h1>転入者の皆様へ</h1>
     <div class="photo">
-        <img src="C:\Users\1310604\OneDrive - トヨタ自動車株式会社\デスクトップ\dig-foundations\day-27-final-test\02_2586r1AP p0016.JPG" width="300" height="200"  />
+        <img src="02_2586r1AP p0016.JPG" width="300" height="200"  />
         <img src="PAJARI05.JPG" width="300" height="200"  />
-        <img src="C:\Users\1310604\OneDrive - トヨタ自動車株式会社\デスクトップ\dig-foundations\day-27-final-test\tjm2520ap611.JPG" width="300" height="200"  />
+        <img src="tjm2520ap611.JPG" width="300" height="200"  />
     </div>
     <h2>ようこそ、ＧＲカンパニーへ！参加する講座名をご確認ください</h2>
     <select id="mySelect">
